# seshat-mcp

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  SESHAT_DEVELOPMENT_PLAN.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
data/: README.md
data/etl/: compute_complexity_scores.py  config.py  ingest_cliopatria.py  ingest_equinox.py  pyproject.toml  validate.py
data/etl/tests/: test_compute_complexity.py  test_ingest_cliopatria.py  test_ingest_equinox.py
data/schemas/: 001_core_tables.sql  002_indexes.sql  003_rpc_functions.sql
docs/: EXAMPLES.md  MODEL.md  MODEL_AUDIT.md
